--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         android:scaleType="centerCrop"
 
@@ -26,7 +26,7 @@
         android:id="@+id/maske"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="32dp"
         android:src="@drawable/tasarim"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,10 +40,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.488"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/maske"
+        app:layout_constraintVertical_bias="0.203"
         app:srcCompat="@drawable/hunter" />
 
     <ImageView
