--- a/app/src/main/res/layout/activity_gelismis_uygulama_ayarlari.xml
+++ b/app/src/main/res/layout/activity_gelismis_uygulama_ayarlari.xml
@@ -11,20 +11,21 @@
         android:id="@+id/imageView27"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:foregroundGravity="center"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/re" />
 
     <TextView
         android:id="@+id/textView17"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="64dp"
         android:fontFamily="@font/poppinsbold"
         android:text="GELİŞMİŞ UYGULAMA AYARLARI"
         android:textColor="@color/white"
@@ -36,24 +37,24 @@
     <ImageView
         android:id="@+id/imageView28"
         android:layout_width="wrap_content"
-        android:layout_height="172dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_height="372dp"
+        android:layout_marginTop="36dp"
+        app:layout_constraintEnd_toEndOf="@+id/imageView27"
+        app:layout_constraintStart_toStartOf="@+id/imageView27"
         app:layout_constraintTop_toBottomOf="@+id/textView17"
         app:srcCompat="@drawable/line" />
 
     <Switch
         android:id="@+id/bluetooth"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="8dp"
+        android:layout_width="320dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="194dp"
+        android:layout_marginTop="64dp"
+        android:checked="false"
+        android:fontFamily="@font/poppinsbold"
         android:text="CİHAZI ETKİNLEŞTİR"
         android:textColor="@color/white"
-        android:textSize="16sp"
-        android:checked="false"
+        android:textSize="20sp"
         android:thumb="@drawable/ellipse1"
         android:track="@drawable/kompresorswitch"
         app:layout_constraintEnd_toStartOf="@+id/imageView28"
@@ -62,14 +63,14 @@
 
     <Switch
         android:id="@+id/switch2"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="8dp"
+        android:layout_width="320dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="194dp"
+        android:layout_marginTop="64dp"
+        android:fontFamily="@font/poppinsbold"
         android:text="KİRLİ SU GÖSTERGESİ"
         android:textColor="@color/white"
-        android:textSize="16sp"
+        android:textSize="20sp"
         android:thumb="@drawable/ellipse1"
         android:track="@drawable/kompresorswitch"
         app:layout_constraintEnd_toStartOf="@+id/imageView28"
@@ -78,128 +79,42 @@
 
     <Switch
         android:id="@+id/switch4"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
+        android:layout_width="320dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="194dp"
+        android:layout_marginTop="64dp"
+        android:fontFamily="@font/poppinsbold"
         android:text="DENGE SİSTEMİ"
         android:textColor="@color/white"
+        android:textSize="20sp"
+        android:thumb="@drawable/ellipse1"
         android:track="@drawable/kompresorswitch"
         app:layout_constraintEnd_toStartOf="@+id/imageView28"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/imageView27"
         app:layout_constraintTop_toBottomOf="@+id/switch2" />
-
-    <TextView
-        android:id="@+id/textView26"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
-        android:layout_weight="1"
-        android:fontFamily="@font/poppinsbold"
-        android:text="KONTROL AKIMI KARTI"
-        android:textColor="@color/white"
-        android:textSize="16sp"
-        app:layout_constraintStart_toEndOf="@+id/imageView28"
-        app:layout_constraintTop_toBottomOf="@+id/textView25" />
-
-    <TextView
-        android:id="@+id/textView27"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="148dp"
-        android:layout_marginTop="28dp"
-        android:layout_weight="1"
-        android:fontFamily="@font/poppinsbold"
-        android:text="2A"
-        android:textColor="@color/white"
-        android:textSize="16sp"
-        app:layout_constraintStart_toEndOf="@+id/textView26"
-        app:layout_constraintTop_toBottomOf="@+id/diagnostikbtn" />
-
-    <TextView
-        android:id="@+id/textView25"
-        android:layout_width="0dp"
-        android:layout_height="29dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
-        android:layout_weight="1"
-        android:fontFamily="@font/poppinsbold"
-        android:text="DİAGNOSTİK MENÜ"
-        android:textColor="@color/white"
-        android:textSize="16sp"
-        app:layout_constraintStart_toEndOf="@+id/imageView28"
-        app:layout_constraintTop_toBottomOf="@+id/textView23" />
-
-    <ImageView
-        android:id="@+id/diagnostikbtn"
-        android:layout_width="40dp"
-        android:layout_height="29dp"
-        android:layout_marginStart="168dp"
-        android:layout_marginTop="20dp"
-        app:layout_constraintStart_toEndOf="@+id/textView25"
-        app:layout_constraintTop_toBottomOf="@+id/imageView29"
-        app:srcCompat="@drawable/bluetooth" />
-
-    <TextView
-        android:id="@+id/textView23"
-        android:layout_width="0dp"
-        android:layout_height="29dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
-        android:fontFamily="@font/poppinsbold"
-        android:text="BLUETOOTH EŞLEŞTİRME"
-        android:textColor="@color/white"
-        android:textSize="16sp"
-        app:layout_constraintStart_toEndOf="@+id/imageView28"
-        app:layout_constraintTop_toBottomOf="@+id/textView17" />
-
-    <TextView
-        android:id="@+id/textView24"
-        android:layout_width="0dp"
-        android:layout_height="29dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="32dp"
-        android:fontFamily="@font/poppinsbold"
-        android:text="47820832"
-        android:textColor="@color/white"
-        app:layout_constraintStart_toEndOf="@+id/textView23"
-        app:layout_constraintTop_toBottomOf="@+id/textView17" />
-
-    <ImageView
-        android:id="@+id/imageView29"
-        android:layout_width="40dp"
-        android:layout_height="29dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/textView24"
-        app:layout_constraintTop_toBottomOf="@+id/textView17"
-        app:srcCompat="@drawable/bluetooth" />
 
     <Button
         android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_width="160dp"
+        android:layout_height="70dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/ayargirisbtn"
         android:fontFamily="@font/poppinsbold"
         android:text="KAYDET"
         android:textColor="@color/white"
         android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/imageView28"
+        app:layout_constraintStart_toStartOf="@+id/imageView28"
         app:layout_constraintTop_toBottomOf="@+id/imageView28" />
 
     <ImageView
         android:id="@+id/backbtn"
         android:layout_width="35dp"
         android:layout_height="31dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="70dp"
+        android:layout_marginStart="52dp"
+        android:foregroundGravity="center"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/switch4"
+        app:layout_constraintTop_toTopOf="@+id/textView28"
         app:srcCompat="@drawable/back" />
 
     <TextView
@@ -207,23 +122,137 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="70dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginTop="100dp"
+        android:fontFamily="@font/poppinsmedium"
         android:text="KULLANICI AYARLARINA GERİ GÖN"
         android:textColor="@color/white"
         android:textSize="16sp"
-        app:layout_constraintEnd_toStartOf="@+id/button"
         app:layout_constraintStart_toEndOf="@+id/backbtn"
         app:layout_constraintTop_toBottomOf="@+id/switch4" />
 
     <ImageView
         android:id="@+id/imageView33"
-        android:layout_width="481dp"
-        android:layout_height="82dp"
+        android:layout_width="448dp"
+        android:layout_height="120dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button"
         app:srcCompat="@drawable/huntercunter" />
+
+    <LinearLayout
+        android:id="@+id/linearLayout19"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_marginStart="72dp"
+        android:layout_marginTop="64dp"
+        android:orientation="horizontal"
+        app:layout_constraintStart_toEndOf="@+id/imageView28"
+        app:layout_constraintTop_toBottomOf="@+id/textView17">
+
+        <TextView
+            android:id="@+id/textView23"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:fontFamily="@font/poppinsbold"
+            android:gravity="center|start"
+            android:text="BLUETOOTH EŞLEŞTİRME"
+            android:textColor="@color/white"
+            android:textSize="20sp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout20"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_marginStart="72dp"
+        android:layout_marginTop="64dp"
+        android:orientation="horizontal"
+        app:layout_constraintStart_toEndOf="@+id/imageView28"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout19">
+
+        <TextView
+            android:id="@+id/textView25"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:fontFamily="@font/poppinsbold"
+            android:gravity="center|start"
+            android:text="DİAGNOSTİK MENÜ"
+            android:textColor="@color/white"
+            android:textSize="20sp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout21"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_marginStart="72dp"
+        android:layout_marginTop="64dp"
+        android:orientation="horizontal"
+        app:layout_constraintStart_toEndOf="@+id/imageView28"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout20">
+
+        <TextView
+            android:id="@+id/textView26"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:fontFamily="@font/poppinsbold"
+            android:gravity="center|start"
+            android:text="KONTROL AKIMI KARTI"
+            android:textColor="@color/white"
+            android:textSize="20sp" />
+
+    </LinearLayout>
+
+    <ImageView
+        android:id="@+id/diagnostikbtn"
+        android:layout_width="37dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="132dp"
+        android:layout_marginTop="64dp"
+        app:layout_constraintStart_toEndOf="@+id/linearLayout20"
+        app:layout_constraintTop_toBottomOf="@+id/imageView29"
+        app:srcCompat="@drawable/bluetooth" />
+
+    <TextView
+        android:id="@+id/textView24"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginBottom="64dp"
+        android:fontFamily="@font/poppinsbold"
+        android:gravity="center|start"
+        android:text="478208"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/diagnostikbtn"
+        app:layout_constraintStart_toEndOf="@+id/linearLayout19" />
+
+    <ImageView
+        android:id="@+id/imageView29"
+        android:layout_width="37dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="64dp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout20"
+        app:layout_constraintStart_toEndOf="@+id/textView24"
+        app:srcCompat="@drawable/bluetooth" />
+
+    <TextView
+        android:id="@+id/textView27"
+        android:layout_width="37dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="96dp"
+        android:layout_marginTop="64dp"
+        android:layout_weight="1"
+        android:fontFamily="@font/poppinsbold"
+        android:gravity="center"
+        android:text="2A"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        app:layout_constraintStart_toEndOf="@+id/linearLayout21"
+        app:layout_constraintTop_toBottomOf="@+id/diagnostikbtn" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
