--- a/app/src/main/res/layout/fragment_ayarlar.xml
+++ b/app/src/main/res/layout/fragment_ayarlar.xml
@@ -10,9 +10,9 @@
 
     <ImageView
         android:id="@+id/imageView5"
-        android:layout_width="81dp"
-        android:layout_height="90dp"
-        android:layout_marginTop="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="133dp"
+        android:layout_marginTop="81dp"
         android:src="@drawable/ayariconn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.52"
@@ -23,7 +23,7 @@
         android:id="@+id/editTextText"
         android:layout_width="280dp"
         android:layout_height="50dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="24dp"
         android:background="@drawable/ayarlarbutton"
         android:ems="10"
         android:hint="Kullanıcı Adı"
@@ -31,16 +31,15 @@
         android:padding="5dp"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.544"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/imageView5"
+        app:layout_constraintStart_toStartOf="@+id/imageView5"
         app:layout_constraintTop_toBottomOf="@+id/imageView5" />
 
     <EditText
         android:id="@+id/editTextText2"
         android:layout_width="280dp"
         android:layout_height="50dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="28dp"
         android:background="@drawable/ayarlarbutton"
         android:ems="10"
         android:hint="Şifre"
@@ -48,33 +47,33 @@
         android:padding="5dp"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.544"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/editTextText"
+        app:layout_constraintStart_toStartOf="@+id/editTextText"
         app:layout_constraintTop_toBottomOf="@+id/editTextText" />
 
     <Button
         android:id="@+id/kaydet"
         android:layout_width="148dp"
         android:layout_height="50dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="32dp"
         android:background="@drawable/ayargirisbtn"
         android:text="GİRİŞ YAP"
         android:textColor="@color/white"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@+id/editTextText2"
+        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="@+id/editTextText2"
         app:layout_constraintTop_toBottomOf="@+id/editTextText2" />
 
     <ImageView
         android:id="@+id/imageView7"
-        android:layout_width="481dp"
-        android:layout_height="82dp"
+        android:layout_width="448dp"
+        android:layout_height="120dp"
+        android:layout_marginBottom="4dp"
         android:src="@drawable/huntercunter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.542"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/kaydet" />
+        app:layout_constraintHorizontal_bias="0.52"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
