--- a/app/src/main/res/layout/fragment_aydinlatma.xml
+++ b/app/src/main/res/layout/fragment_aydinlatma.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="32dp"
         android:orientation="vertical"
         app:layout_constraintStart_toEndOf="@+id/yatakodasi"
         app:layout_constraintTop_toBottomOf="@+id/oturmaalaniisik">
@@ -45,7 +45,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="32dp"
         android:orientation="vertical"
         app:layout_constraintStart_toEndOf="@+id/oturmaalani"
         app:layout_constraintTop_toBottomOf="@+id/mutfaktavan">
@@ -77,7 +77,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="32dp"
         android:orientation="vertical"
         app:layout_constraintStart_toEndOf="@+id/mutfakisik"
         app:layout_constraintTop_toBottomOf="@+id/disaydinlatma">
@@ -109,8 +109,8 @@
         android:id="@+id/yatakodasi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="29dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginStart="205dp"
+        android:layout_marginTop="32dp"
         android:orientation="vertical"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/oturmaalani">
@@ -142,8 +142,8 @@
         android:id="@+id/oturmaalani"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginStart="190dp"
+        android:layout_marginTop="32dp"
         android:orientation="vertical"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/mutfakisik">
@@ -175,7 +175,7 @@
         android:id="@+id/icaydinlatma"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="130dp"
         android:fontFamily="@font/poppinsbold"
         android:text="İÇ AYDINLATMALAR"
         android:textColor="@color/white"
@@ -188,7 +188,7 @@
         android:id="@+id/disaydinlatma"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="130dp"
         android:fontFamily="@font/poppinsbold"
         android:text="DIŞ AYDINLATMALAR"
         android:textColor="@color/white"
@@ -202,8 +202,8 @@
         android:id="@+id/mutfakisik"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="60dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="235dp"
+        android:layout_marginTop="32dp"
         android:orientation="vertical"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/disaydinlatma">
@@ -234,7 +234,7 @@
         android:id="@+id/imageView4"
         android:layout_width="wrap_content"
         android:layout_height="240dp"
-        android:layout_marginTop="72dp"
+        android:layout_marginTop="188dp"
         android:src="@drawable/line"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -244,8 +244,8 @@
         android:id="@+id/linearLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="99dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="100dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toStartOf="@+id/linearLayout3"
         app:layout_constraintTop_toBottomOf="@+id/icaydinlatma">
@@ -276,7 +276,7 @@
         android:id="@+id/linearLayout2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="90dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toStartOf="@+id/linearLayout4"
@@ -306,7 +306,7 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="70dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toStartOf="@+id/linearLayout5"
@@ -337,8 +337,8 @@
         android:id="@+id/linearLayout3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="29dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="205dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/icaydinlatma">
@@ -369,8 +369,8 @@
         android:id="@+id/linearLayout4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="200dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout3">
@@ -400,8 +400,8 @@
         android:id="@+id/linearLayout5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="200dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout4">
@@ -429,13 +429,12 @@
 
     <ImageView
         android:id="@+id/imageView26"
-        android:layout_width="481dp"
-        android:layout_height="82dp"
+        android:layout_width="448dp"
+        android:layout_height="120dp"
         android:src="@drawable/huntercunter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
