--- a/app/src/main/res/layout/fragment_gostergeler.xml
+++ b/app/src/main/res/layout/fragment_gostergeler.xml
@@ -11,11 +11,12 @@
         android:id="@+id/textView55"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="71dp"
         android:fontFamily="@font/poppinsbold"
         android:text="TEMİZ SU"
         android:textColor="@color/white"
         android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/imageView48"
         app:layout_constraintEnd_toEndOf="@+id/imageView48"
         app:layout_constraintStart_toStartOf="@+id/imageView48"
         app:layout_constraintTop_toTopOf="parent" />
@@ -24,7 +25,7 @@
         android:id="@+id/textView56"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="6dp"
+        android:layout_marginTop="71dp"
         android:fontFamily="@font/poppinsbold"
         android:text="ATIK SU"
         android:textColor="@color/white"
@@ -37,9 +38,9 @@
         android:id="@+id/imageView48"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginStart="81dp"
         android:src="@drawable/rectanglegosterge"
+        app:layout_constraintEnd_toStartOf="@+id/imageView50"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView55" />
 
@@ -47,30 +48,29 @@
         android:id="@+id/imageView50"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="60dp"
-        android:layout_marginTop="4dp"
         android:src="@drawable/rectanglegosterge"
-        app:layout_constraintStart_toEndOf="@+id/imageView48"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.488"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView56" />
 
     <ImageView
         android:id="@+id/imageView53"
-        android:layout_width="200dp"
+        android:layout_width="201dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         android:layout_marginBottom="8dp"
         android:src="@drawable/gostergerectanglemavi75"
         app:layout_constraintBottom_toBottomOf="@+id/imageView48"
         app:layout_constraintEnd_toEndOf="@+id/imageView48"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/imageView48" />
 
     <ImageView
         android:id="@+id/imageView54"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp"
         android:layout_marginBottom="8dp"
         android:src="@drawable/rectanglegri"
         app:layout_constraintBottom_toBottomOf="@+id/imageView50"
@@ -81,57 +81,55 @@
         android:id="@+id/textView60"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="71dp"
+        android:fontFamily="@font/poppinsbold"
         android:text="SICAKLIK VE NEM"
         android:textColor="@color/white"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="@+id/imageView55"
-        app:layout_constraintStart_toStartOf="@+id/imageView55"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="@+id/linearLayout24"
+        app:layout_constraintStart_toStartOf="@+id/linearLayout18"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageView55"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="56dp"
         android:src="@drawable/termometre"
-        app:layout_constraintEnd_toEndOf="@+id/imageView56"
-        app:layout_constraintStart_toStartOf="@+id/imageView56"
+        app:layout_constraintStart_toEndOf="@+id/linearLayout18"
         app:layout_constraintTop_toBottomOf="@+id/textView60" />
 
     <TextView
         android:id="@+id/textView61"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
         android:text="İÇ SICAKLIK"
         android:textColor="@color/white"
         android:textSize="16sp"
-        app:layout_constraintEnd_toStartOf="@+id/imageView55"
-        app:layout_constraintStart_toEndOf="@+id/imageView50"
-        app:layout_constraintTop_toTopOf="@+id/imageView55" />
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout18"
+        app:layout_constraintEnd_toEndOf="@+id/linearLayout18"
+        app:layout_constraintStart_toStartOf="@+id/linearLayout18" />
 
     <TextView
         android:id="@+id/textView62"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
         android:text="DIŞ SICAKLIK"
         android:textColor="@color/white"
         android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView55"
-        app:layout_constraintTop_toTopOf="@+id/imageView55" />
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout24"
+        app:layout_constraintEnd_toEndOf="@+id/linearLayout24"
+        app:layout_constraintStart_toStartOf="@+id/linearLayout24" />
 
     <LinearLayout
         android:id="@+id/linearLayout18"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="90dp"
         android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="@+id/textView61"
-        app:layout_constraintStart_toStartOf="@+id/textView61"
-        app:layout_constraintTop_toBottomOf="@+id/textView61">
+        app:layout_constraintStart_toEndOf="@+id/imageView50"
+        app:layout_constraintTop_toTopOf="@+id/imageView55">
 
         <TextView
             android:id="@+id/textView72"
@@ -141,7 +139,7 @@
             android:gravity="end"
             android:text="24"
             android:textColor="@color/white"
-            android:textSize="24sp" />
+            android:textSize="54sp" />
 
         <TextView
             android:id="@+id/textView73"
@@ -150,17 +148,17 @@
             android:layout_weight="1"
             android:text="°C"
             android:textColor="@color/white"
-            android:textSize="24sp" />
+            android:textSize="54sp" />
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="0dp"
+        android:id="@+id/linearLayout24"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp"
         android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="@+id/textView62"
-        app:layout_constraintStart_toStartOf="@+id/textView62"
-        app:layout_constraintTop_toBottomOf="@+id/textView62">
+        app:layout_constraintStart_toEndOf="@+id/imageView55"
+        app:layout_constraintTop_toTopOf="@+id/imageView55">
 
         <TextView
             android:id="@+id/textView74"
@@ -170,7 +168,7 @@
             android:gravity="center|end"
             android:text="38"
             android:textColor="@color/white"
-            android:textSize="24sp" />
+            android:textSize="54sp" />
 
         <TextView
             android:id="@+id/textView75"
@@ -179,111 +177,116 @@
             android:layout_weight="1"
             android:text="°C"
             android:textColor="@color/white"
-            android:textSize="24sp" />
+            android:textSize="54sp" />
     </LinearLayout>
 
     <TextView
         android:id="@+id/textView76"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="12dp"
         android:text="İÇ NEM"
         android:textColor="@color/white"
         android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="@+id/imageView55"
-        app:layout_constraintStart_toStartOf="@+id/imageView55"
+        app:layout_constraintEnd_toEndOf="@+id/linearLayout24"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="@+id/linearLayout18"
         app:layout_constraintTop_toBottomOf="@+id/imageView55" />
-
-    <TextView
-        android:id="@+id/textView77"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:fontFamily="@font/poppinsextralight"
-        android:text="48"
-        android:textColor="@color/white"
-        android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="@+id/textView76"
-        app:layout_constraintTop_toBottomOf="@+id/textView76" />
-
-    <TextView
-        android:id="@+id/textView78"
-        android:layout_width="14dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:fontFamily="@font/poppinsextralight"
-        android:text="%"
-        android:textColor="@color/white"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="@+id/textView76"
-        app:layout_constraintStart_toEndOf="@+id/textView77"
-        app:layout_constraintTop_toBottomOf="@+id/textView76" />
 
     <ImageView
         android:id="@+id/imageView56"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:src="@drawable/icnem"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView50"
-        app:layout_constraintTop_toBottomOf="@+id/textView77" />
+        app:layout_constraintEnd_toEndOf="@+id/linearLayout25"
+        app:layout_constraintStart_toStartOf="@+id/linearLayout25"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout25" />
 
     <TextView
         android:id="@+id/textView79"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="92dp"
-        android:layout_marginBottom="124dp"
+        android:layout_marginBottom="108dp"
         android:text="86"
         android:textColor="@color/white"
-        android:textSize="34sp"
+        android:textSize="48sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView48"
+        app:layout_constraintEnd_toStartOf="@+id/textView81"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/imageView48" />
 
     <TextView
         android:id="@+id/textView80"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="76dp"
         android:layout_marginBottom="108dp"
         android:text="53"
         android:textColor="@color/white"
-        android:textSize="34sp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView54"
+        android:textSize="48sp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView50"
+        app:layout_constraintEnd_toStartOf="@+id/textView82"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/imageView50" />
 
     <TextView
         android:id="@+id/textView81"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="124dp"
+        android:layout_marginEnd="64dp"
+        android:layout_marginBottom="108dp"
         android:text="%"
         android:textColor="@color/white"
-        android:textSize="34sp"
+        android:textSize="48sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView48"
-        app:layout_constraintStart_toEndOf="@+id/textView79" />
+        app:layout_constraintEnd_toEndOf="@+id/imageView48" />
 
     <TextView
         android:id="@+id/textView82"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginBottom="108dp"
+        android:layout_marginEnd="64dp"
+        android:layout_marginBottom="100dp"
         android:text="%"
         android:textColor="@color/white"
-        android:textSize="34sp"
+        android:textSize="48sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView54"
-        app:layout_constraintStart_toEndOf="@+id/textView80" />
+        app:layout_constraintEnd_toEndOf="@+id/imageView50" />
 
     <ImageView
         android:id="@+id/imageView57"
-        android:layout_width="481dp"
-        android:layout_height="81dp"
+        android:layout_width="448dp"
+        android:layout_height="120dp"
         android:src="@drawable/huntercunter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView50" />
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/linearLayout25"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="@+id/textView76"
+        app:layout_constraintStart_toStartOf="@+id/textView76"
+        app:layout_constraintTop_toBottomOf="@+id/textView76">
+
+        <TextView
+            android:id="@+id/textView77"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/poppinsextralight"
+            android:text="48"
+            android:textColor="@color/white"
+            android:textSize="48sp" />
+
+        <TextView
+            android:id="@+id/textView78"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/poppinsextralight"
+            android:text="%"
+            android:textColor="@color/white"
+            android:textSize="48sp" />
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
