--- a/app/src/main/res/layout/fragment_aydinlatma.xml
+++ b/app/src/main/res/layout/fragment_aydinlatma.xml
@@ -11,7 +11,7 @@
         android:id="@+id/yatakodasıışık"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:orientation="vertical"
         app:layout_constraintStart_toEndOf="@+id/yatakodasi"
@@ -44,7 +44,7 @@
         android:id="@+id/oturmaalaniisik"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
         android:orientation="vertical"
         app:layout_constraintStart_toEndOf="@+id/oturmaalani"
@@ -56,7 +56,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/poppinsbold"
             android:gravity="center"
-            android:text="OTURMA ALANI IŞIKLARI"
+            android:text="OTURMA ALANI IŞIKLARI L/R)"
             android:textColor="@color/white"
             android:textSize="16sp" />
 
@@ -76,7 +76,7 @@
         android:id="@+id/mutfaktavan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
+        android:layout_marginStart="70dp"
         android:layout_marginTop="32dp"
         android:orientation="vertical"
         app:layout_constraintStart_toEndOf="@+id/mutfakisik"
@@ -109,7 +109,7 @@
         android:id="@+id/yatakodasi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="205dp"
+        android:layout_marginStart="190dp"
         android:layout_marginTop="32dp"
         android:orientation="vertical"
         app:layout_constraintStart_toStartOf="parent"
@@ -142,7 +142,7 @@
         android:id="@+id/oturmaalani"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="190dp"
+        android:layout_marginStart="180dp"
         android:layout_marginTop="32dp"
         android:orientation="vertical"
         app:layout_constraintStart_toStartOf="parent"
@@ -202,7 +202,7 @@
         android:id="@+id/mutfakisik"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="235dp"
+        android:layout_marginStart="220dp"
         android:layout_marginTop="32dp"
         android:orientation="vertical"
         app:layout_constraintStart_toStartOf="parent"
