--- a/app/src/main/res/layout/fragment_anasayfa.xml
+++ b/app/src/main/res/layout/fragment_anasayfa.xml
@@ -66,7 +66,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="224dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:src="@drawable/akuicon"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView42" />
@@ -85,6 +85,7 @@
         android:id="@+id/imageView44"
         android:layout_width="wrap_content"
         android:layout_height="160dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="224dp"
         android:src="@drawable/akuicon"
         app:layout_constraintEnd_toEndOf="parent"
@@ -133,7 +134,7 @@
         android:id="@+id/imageView45"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="14dp"
         android:src="@drawable/termometre"
         app:layout_constraintEnd_toEndOf="@+id/textView46"
         app:layout_constraintStart_toStartOf="@+id/textView46"
@@ -206,7 +207,7 @@
             android:id="@+id/textView57"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_marginStart="4dp"
+            android:layout_marginStart="9dp"
             android:layout_marginEnd="4dp"
             android:layout_weight="1"
             android:fontFamily="@font/poppinsextralight"
@@ -247,7 +248,7 @@
             android:id="@+id/textView63"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_marginStart="5dp"
+            android:layout_marginStart="9dp"
             android:layout_weight="1"
             android:fontFamily="@font/poppinsextralight"
             android:gravity="center"
@@ -270,27 +271,29 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="72dp"
+        android:layout_marginStart="68dp"
+        android:fontFamily="@font/poppinsextralight"
         android:text="63"
         android:textColor="@color/white"
-        android:textSize="48sp"
+        android:textSize="54sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView42"
         app:layout_constraintStart_toStartOf="@+id/imageView32"
         app:layout_constraintTop_toBottomOf="@+id/textView42"
-        app:layout_constraintVertical_bias="0.578" />
+        app:layout_constraintVertical_bias="0.739" />
 
     <TextView
         android:id="@+id/textView66"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="48dp"
+        android:layout_marginEnd="56dp"
+        android:fontFamily="@font/poppinsextralight"
         android:text="%"
         android:textColor="@color/white"
-        android:textSize="48sp"
+        android:textSize="54sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView32"
         app:layout_constraintEnd_toEndOf="@+id/imageView32"
         app:layout_constraintTop_toBottomOf="@+id/textView42"
-        app:layout_constraintVertical_bias="0.533" />
+        app:layout_constraintVertical_bias="0.666" />
 
     <TextView
         android:id="@+id/textView67"
@@ -298,9 +301,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="60dp"
         android:layout_marginTop="48dp"
+        android:fontFamily="@font/poppinsextralight"
         android:text="86"
         android:textColor="@color/white"
-        android:textSize="48sp"
+        android:textSize="54sp"
         app:layout_constraintStart_toStartOf="@+id/imageView44"
         app:layout_constraintTop_toBottomOf="@+id/textView43" />
 
@@ -309,10 +313,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
-        android:layout_marginEnd="64dp"
+        android:layout_marginEnd="60dp"
+        android:fontFamily="@font/poppinsextralight"
         android:text="%"
         android:textColor="@color/white"
-        android:textSize="48sp"
+        android:textSize="54sp"
         app:layout_constraintEnd_toEndOf="@+id/imageView44"
         app:layout_constraintTop_toBottomOf="@+id/textView43" />
 
