--- a/app/src/main/res/layout/fragment_gostergeler.xml
+++ b/app/src/main/res/layout/fragment_gostergeler.xml
@@ -11,7 +11,7 @@
         android:id="@+id/textView55"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="71dp"
+        android:layout_marginTop="130dp"
         android:fontFamily="@font/poppinsbold"
         android:text="TEMİZ SU"
         android:textColor="@color/white"
@@ -25,7 +25,7 @@
         android:id="@+id/textView56"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="71dp"
+        android:layout_marginTop="130dp"
         android:fontFamily="@font/poppinsbold"
         android:text="ATIK SU"
         android:textColor="@color/white"
@@ -81,7 +81,7 @@
         android:id="@+id/textView60"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="71dp"
+        android:layout_marginTop="130dp"
         android:fontFamily="@font/poppinsbold"
         android:text="SICAKLIK VE NEM"
         android:textColor="@color/white"
@@ -136,6 +136,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:fontFamily="@font/poppinsextralight"
             android:gravity="end"
             android:text="24"
             android:textColor="@color/white"
@@ -146,6 +147,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:fontFamily="@font/poppinsextralight"
             android:text="°C"
             android:textColor="@color/white"
             android:textSize="54sp" />
@@ -165,6 +167,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:fontFamily="@font/poppinsextralight"
             android:gravity="center|end"
             android:text="38"
             android:textColor="@color/white"
@@ -175,6 +178,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:fontFamily="@font/poppinsextralight"
             android:text="°C"
             android:textColor="@color/white"
             android:textSize="54sp" />
@@ -207,9 +211,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="108dp"
+        android:fontFamily="@font/poppinsextralight"
         android:text="86"
         android:textColor="@color/white"
-        android:textSize="48sp"
+        android:textSize="54sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView48"
         app:layout_constraintEnd_toStartOf="@+id/textView81"
         app:layout_constraintHorizontal_bias="1.0"
@@ -220,9 +225,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="108dp"
+        android:fontFamily="@font/poppinsextralight"
         android:text="53"
         android:textColor="@color/white"
-        android:textSize="48sp"
+        android:textSize="54sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView50"
         app:layout_constraintEnd_toStartOf="@+id/textView82"
         app:layout_constraintHorizontal_bias="1.0"
@@ -234,9 +240,10 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="64dp"
         android:layout_marginBottom="108dp"
+        android:fontFamily="@font/poppinsextralight"
         android:text="%"
         android:textColor="@color/white"
-        android:textSize="48sp"
+        android:textSize="54sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView48"
         app:layout_constraintEnd_toEndOf="@+id/imageView48" />
 
@@ -246,9 +253,10 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="64dp"
         android:layout_marginBottom="100dp"
+        android:fontFamily="@font/poppinsextralight"
         android:text="%"
         android:textColor="@color/white"
-        android:textSize="48sp"
+        android:textSize="54sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView54"
         app:layout_constraintEnd_toEndOf="@+id/imageView50" />
 
