--- a/app/src/main/res/layout/activity_kullanici_uygulama_ayarlari.xml
+++ b/app/src/main/res/layout/activity_kullanici_uygulama_ayarlari.xml
@@ -24,7 +24,7 @@
         android:id="@+id/textView30"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="60dp"
         android:fontFamily="@font/poppinsbold"
         android:text="KULLANICI UYGULAMA AYARLARI"
         android:textColor="@color/white"
@@ -48,7 +48,7 @@
         android:layout_width="360dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="144dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="44dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toStartOf="@+id/imageView36"
         app:layout_constraintStart_toStartOf="parent"
@@ -174,7 +174,7 @@
         android:id="@+id/linearLayout16"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="44dp"
         android:layout_marginEnd="144dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
@@ -288,7 +288,6 @@
         android:background="@drawable/ayargirisbtn"
         android:text="KAYDET"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/imageView43"
         app:layout_constraintEnd_toEndOf="@+id/imageView36"
         app:layout_constraintStart_toStartOf="@+id/imageView36"
         app:layout_constraintTop_toBottomOf="@+id/imageView36" />
@@ -306,7 +305,8 @@
         android:id="@+id/backbutton1"
         android:layout_width="108dp"
         android:layout_height="31dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginStart="72dp"
+        android:layout_marginTop="60dp"
         app:layout_constraintEnd_toStartOf="@+id/textView30"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
