--- a/app/src/main/res/layout/fragment_denge_sistemi.xml
+++ b/app/src/main/res/layout/fragment_denge_sistemi.xml
@@ -8,17 +8,17 @@
 
     <ImageView
         android:id="@+id/imageView15"
-        android:layout_width="368dp"
-        android:layout_height="337dp"
-        android:layout_marginStart="200dp"
-        android:layout_marginTop="130dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="84dp"
+        android:layout_marginTop="55dp"
         android:src="@drawable/gostergeler"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageView23"
-        android:layout_width="253dp"
+        android:layout_width="wrap_content"
         android:layout_height="235dp"
         android:src="@drawable/gostergeler2"
         app:layout_constraintBottom_toBottomOf="@+id/imageView15"
@@ -29,45 +29,43 @@
 
     <ImageView
         android:id="@+id/imageView24"
-        android:layout_width="350dp"
-        android:layout_height="337dp"
-        android:layout_marginTop="130dp"
-        android:layout_marginEnd="200dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="55dp"
         android:src="@drawable/gostergeler"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/imageView25"
+        app:layout_constraintHorizontal_bias="0.636"
+        app:layout_constraintStart_toStartOf="@+id/imageView25"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageView25"
-        android:layout_width="322dp"
-        android:layout_height="318dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="80dp"
         android:src="@drawable/gostergeler3"
         app:layout_constraintBottom_toBottomOf="@+id/imageView24"
-        app:layout_constraintEnd_toEndOf="@+id/imageView24"
-        app:layout_constraintStart_toStartOf="@+id/imageView24"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView24" />
 
     <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:layout_marginTop="130dp"
-        android:layout_marginBottom="7dp"
+        android:layout_marginTop="30dp"
         android:background="@drawable/otomatik"
-        app:layout_constraintBottom_toTopOf="@+id/imageView23"
         app:layout_constraintEnd_toEndOf="@+id/imageView24"
         app:layout_constraintStart_toStartOf="@+id/imageView15"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:id="@+id/linearLayout7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toStartOf="@+id/linearLayout6"
-        app:layout_constraintStart_toEndOf="@+id/imageView15"
+        app:layout_constraintStart_toStartOf="@+id/button2"
         app:layout_constraintTop_toBottomOf="@+id/textView70">
 
         <Button
@@ -87,13 +85,11 @@
     <LinearLayout
         android:id="@+id/linearLayout6"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="24dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="32dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="@+id/linearLayout7"
-        app:layout_constraintEnd_toStartOf="@+id/imageView24"
-        app:layout_constraintStart_toEndOf="@+id/linearLayout7"
+        app:layout_constraintEnd_toEndOf="@+id/button2"
         app:layout_constraintTop_toBottomOf="@+id/textView69">
 
         <Button
@@ -114,16 +110,16 @@
         android:id="@+id/linearLayout8"
         android:layout_width="wrap_content"
         android:layout_height="60dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="66dp"
         android:background="@drawable/kompresorrectangle"
         android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="@+id/imageView24"
-        app:layout_constraintStart_toStartOf="@+id/imageView15"
+        app:layout_constraintEnd_toStartOf="@+id/imageView25"
+        app:layout_constraintStart_toEndOf="@+id/imageView15"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout7">
 
         <TextView
-            android:layout_width="58dp"
-            android:layout_height="29dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="1"
             android:fontFamily="@font/poppinsbold"
@@ -158,7 +154,7 @@
         android:id="@+id/textView69"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="64dp"
         android:fontFamily="@font/poppinsblack"
         android:gravity="center"
         android:text="SAĞ"
@@ -173,7 +169,7 @@
         android:id="@+id/textView70"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="64dp"
         android:fontFamily="@font/poppinsblack"
         android:text="SOL"
         android:textColor="#FDFDFD"
