--- a/app/src/main/res/layout/fragment_kontroller.xml
+++ b/app/src/main/res/layout/fragment_kontroller.xml
@@ -12,7 +12,7 @@
         android:id="@+id/textView7"
         android:layout_width="180dp"
         android:layout_height="36dp"
-        android:layout_marginTop="130dp"
+        android:layout_marginTop="30dp"
         android:fontFamily="@font/poppinsbold"
         android:gravity="center"
         android:text="USB KULLANIMI"
@@ -26,7 +26,7 @@
         android:id="@+id/textView13"
         android:layout_width="180dp"
         android:layout_height="36dp"
-        android:layout_marginTop="130dp"
+        android:layout_marginTop="30dp"
         android:fontFamily="@font/poppinsbold"
         android:gravity="center"
         android:text="HİDROFOR"
@@ -51,7 +51,7 @@
         android:layout_width="wrap_content"
         android:layout_height="160dp"
         android:layout_marginStart="64dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="50dp"
         android:src="@drawable/usbkullanimi"
         app:layout_constraintEnd_toStartOf="@+id/imageView8"
         app:layout_constraintHorizontal_bias="0.502"
@@ -62,7 +62,7 @@
         android:id="@+id/imageView10"
         android:layout_width="wrap_content"
         android:layout_height="160dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="50dp"
         android:layout_marginEnd="64dp"
         android:src="@drawable/hidrofor"
         app:layout_constraintEnd_toEndOf="parent"
@@ -81,10 +81,11 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <LinearLayout
+        android:id="@+id/linearLayout26"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="64dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="81dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toStartOf="@+id/imageView8"
         app:layout_constraintStart_toStartOf="parent"
@@ -118,7 +119,7 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="81dp"
         android:layout_marginEnd="64dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
